Se cambia el nombre TVOnline Se agrega validacion de usuario vacio al iniciar sesion Se agrega soporte para aceptar usuarios sin importar mayusculas o minusculas Se corrige formato de fechas al iniciar sesión Se agrega notificacion por correo de usuario no permitido Se valida notificacion por correo de usuario con sesión duplicada
Se corrige bug que inicializaba el frame con el canal de animal planet
Se agrega id a los canales
Se agregan usuarios de prueba hasta el dia 20 de agosto de 2025

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Canales en Vivo",
-  "short_name": "CanalesVivo",
+  "name": "TV Online",
+  "short_name": "TVOnline",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#eceef3",
